<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="categories">
        <item>Designations</item>
        <item>Gifts</item>
        <item>Donate</item>
        <item>Prayer/Updates</item>
        <item>Contact Missionary</item>
        <item>Accounts</item>
    </string-array>
    <string-array name="contactTypes">
        <item>Encouragement</item>
        <item>Prayer Request</item>
        <item>Praise</item>
    </string-array>
    <string-array name="notification_on_off">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
    <string-array name="notification_options">
        <item>Once per day</item>
        <item>Twice per day</item>
        <item>3 times per day</item>
        <item>4 times per day</item>
    </string-array>
    <string-array name="refresh_times">
        <item>Never</item>
        <item>Minute</item>
        <item>Thirty Minutes</item>
        <item>Hour</item>
        <item>Twelve Hours</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string name="app_name">Kardia Donor</string>
    <string name="action_settings">Settings</string>
    <string name="ytd">YTD: </string>
    <string name="total_2014_ytd_">"Total (2014 YTD): "</string>
    <string name="amount">Amount:</string>
    <string name="view_pdf_receipt">View PDF Receipt</string>
    <string name="donate_now">Donate</string>
    <string name="accounts_page">Manage Accounts</string>
    <string name="add_new_account">Add New Account:</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="server_name">server name</string>
    <string name="done">Done</string>
    <string name="connect">Connect</string>
    <string name="edit_account">Edit Account</string>
    <string name="donor_id_ex_100001">Donor ID (ex. 100001)</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="date_range">Date Range</string>
    <string name="choose_date">Choose Date</string>
    <string name="_">" - "</string>
    <string name="by_amount">By Amount</string>
    <string name="amount_range">Amount Range</string>
    <string name="by_check_number">By Check Number</string>
    <string name="subject_title">Subject:</string>
    <string name="subject">subject</string>
    <string name="type_contact">Type Of Contact:</string>
    <string name="message">Message</string>
    <string name="notification_setting">Prayer Notifications"</string>
    <string name="times_per_day">time(s) per day</string>
    <string name="cancel">Cancel</string>
    <string name="from">From:</string>
    <string name="name">name</string>
    <string name="set">Set</string>
    <string name="end_date">End Date:</string>
    <string name="choose_time">Choose Time</string>
    <string name="time1">Time #1:\ </string>
    <string name="time2">Time #2:\ </string>
    <string name="time3">Time #3:\ </string>
    <string name="time4">Time #4:\ </string>
    <string name="range_check_box">Notify me randomly\nwithin a timeframe</string>
    <string name="dollar_sign">$</string>
    <string name="praying">Praying</string>
    <string name="comment">Comment</string>
    <string name="comment_prompt">Enter your comment</string>
    <string name="userID_Prompt">Enter Donor ID</string>
    <string name="original_message_label">Original Post</string>
    <string name="view_pdf">View Letter</string>

</resources>
