<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/senderRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/from"
            android:id="@+id/senderTitle" />

        <Spinner
            android:id="@+id/senderName"
            android:layout_width="235dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjectRow"
        android:layout_below="@id/senderRow"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/subjectTitle"
            android:text = "@string/subject_title"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/subjectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:ems="12"
            android:singleLine="true"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"/>
    </TableRow>

    <TableRow
        android:id="@+id/contactTypeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjectRow"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:text = "@string/type_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/contactTypes" />
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactTypeRow"
        android:layout_above="@+id/buttonRow"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15">

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/message" />
    </ScrollView>

    <TableRow
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancelButton"
            style="@style/customBottomBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/submitButton"
            style="@style/customBottomBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold" />

    </TableRow>

</RelativeLayout>