<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <TableRow
        android:id="@+id/timesDayRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/times_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/notification_options"
            android:spinnerMode="dialog" />

        <CheckBox
            android:id="@+id/rangeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/range_check_box" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel"
            style="@style/customBottomBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/cancel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setNotification"
            style="@style/customBottomBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/endDateRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timesDayRow"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp" />

        <Button
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date" />

    </TableRow>

    <TableRow
        android:id="@+id/timeRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDateRow"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/timeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:visibility="invisible" />

        <Button
            android:id="@+id/timePicker1Ext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:id="@+id/timeRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeRow1"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/timeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:visibility="invisible" />

        <Button
            android:id="@+id/timePicker2Ext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:id="@+id/timeRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeRow2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/timeText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePicker3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:visibility="invisible" />

        <Button
            android:id="@+id/timePicker3Ext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:visibility="invisible" />
    </TableRow>

    <TableRow
        android:id="@+id/timeRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeRow3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/timeText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePicker4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:visibility="invisible" />

        <Button
            android:id="@+id/timePicker4Ext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:visibility="invisible" />
    </TableRow>

</RelativeLayout>