<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/noise_blue_repeat" >

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username" >

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/userPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/serverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/server_name" />

    <EditText
        android:id="@+id/donorId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:hint="@+string/donor_id_ex_100001"
        android:inputType="number" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Submit"
            style="@style/customBottomBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="115dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/cancel"
            style="@style/customBottomBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="18dp" />
    </TableRow>

</LinearLayout>
